# CiTT

./: AGENTS.md  README.md  citt_generated_model.slxc  citt_test_stop_time_parameter.slxc  startup.m
.gemini/: settings.json
vericircuit-tutor/backend/: .gitignore  pyproject.toml
vericircuit-tutor/backend/app/: __init__.py  main.py
vericircuit-tutor/backend/app/examples/: bridge_network.json  bridge_network_alt.json  current_divider.json  voltage_divider.json
vericircuit-tutor/backend/scripts/: export_matlab_offline_bundle.py  export_schematics.py  inspect_gemini_schema.py  run_evaluation.py  run_tutor_100_case_qa.py  run_web_language_100_case_qa.py  smoke_test_gemini.py
vericircuit-tutor/backend/tests/: test_ac_and_op_amp.py  test_analysis_view.py  test_bme_templates.py  test_calculation_trace.py  test_current_source.py  test_ecg_rld_common_mode.py  test_error_handling.py  test_gemini_fallback.py  test_guided_steps.py  test_image_parser_endpoint.py  test_lab_delta.py  test_lab_simulator.py  test_lesson_packet.py  test_matlab_offline_bundle_export.py  test_matlab_playground_api.py  test_matlab_playground_artifacts.py  test_matlab_playground_lab_delta.py  test_matlab_plugin_api.py  test_matlab_plugin_generator.py  test_nonlinear_macromodel_noise.py  test_parser_authority.py  test_power_balance.py  test_reasoning_coach.py  test_schematic.py  test_scope_boundary.py  test_socratic_lecture.py  test_teaching_plots.py  test_tutor_explainer.py  test_validator.py  test_variants.py  test_visual_layout.py  test_voltage_clamp_symbolic.py  test_voltage_divider.py
(+633 files in other folders)
