[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vericircuit-tutor-backend"
version = "0.1.0"
description = "Simulation-grounded AI tutor MVP for supported undergraduate circuit-analysis workflows, BME teaching templates, and reasoning coaching."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "google-genai>=1.0",
  "numpy>=1.26",
  "pydantic>=2.7",
  "schemdraw>=0.19",
  "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = [
  "schematic_exports*",
  "scripts*",
  "tests*",
  "docs*",
]

[tool.setuptools.package-data]
app = [
  "static/*",
  "examples/*.json",
]
